--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='en'><head>
   <title>ABOUT - Edna West</title>
-  <link rel='canonical' href='https://example.com/about/' />
+  <link rel='canonical' href='https://maznaz-ha.github.io/marek.wayland.one/about/' />
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1' />
   <meta name='description' content='Hey, I&#39;m Edna West' />
@@ -16,13 +16,13 @@
 
 
 
-<link rel="stylesheet" href="https://example.com/sass/style.min.eabe1aa4bd266a15f7b39b122bd6a5cc75cb067e5373631ac21d7815d6240d6f.css" integrity="sha256-6r4apL0mahX3s5sSK9alzHXLBn5Tc2Mawh14FdYkDW8=" media="screen">
-<link rel="stylesheet" href="https://example.com/syntax.min.css" integrity="" media="screen">
+<link rel="stylesheet" href="https://maznaz-ha.github.io/marek.wayland.one/sass/style.min.eabe1aa4bd266a15f7b39b122bd6a5cc75cb067e5373631ac21d7815d6240d6f.css" integrity="sha256-6r4apL0mahX3s5sSK9alzHXLBn5Tc2Mawh14FdYkDW8=" media="screen">
+<link rel="stylesheet" href="https://maznaz-ha.github.io/marek.wayland.one/syntax.min.css" integrity="" media="screen">
 
   <meta property="og:title" content="ABOUT" />
 <meta property="og:description" content="Hey, I&#39;m Edna West" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://example.com/about/" /><meta property="og:image" content="https://example.com/images/sample.jpg" />
+<meta property="og:url" content="https://maznaz-ha.github.io/marek.wayland.one/about/" /><meta property="og:image" content="https://maznaz-ha.github.io/images/sample.jpg" />
 
   <meta itemprop="name" content="ABOUT">
 <meta itemprop="description" content="Hey, I&#39;m Edna West">
@@ -31,11 +31,11 @@
 
   <header style="background-image:linear-gradient(
       rgba(0,0,0,0.4),rgba(0,0,0,0.4)
-    ),url(&#39;https://example.com/images/default-sidebar.jpg&#39;)">
+    ),url(&#39;https://maznaz-ha.github.io/marek.wayland.one/images/default-sidebar.jpg&#39;)">
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='https://example.com/images/edna-west.jpg' alt="Profile Sample project" class="rounded-logo">
+        <img src='https://maznaz-ha.github.io/marek.wayland.one/images/edna-west.jpg' alt="Profile Sample project" class="rounded-logo">
       </a>
     </div>
     <h2>Hi, I'm Edna 👋</h2>
@@ -44,19 +44,19 @@
       
 
         <p>
-            <a href="/about/">
+            <a href="/marek.wayland.one/about/">
                 About
             </a>
         </p>
 
         <p>
-            <a href="/portfolio/">
+            <a href="/marek.wayland.one/portfolio/">
                 Portfolio
             </a>
         </p>
 
         <p>
-            <a href="/post/">
+            <a href="/marek.wayland.one/post/">
                 Post
             </a>
         </p>
@@ -194,7 +194,7 @@
     <div class="intro">
       <div class="logo-container">
         <a href="/">
-          <img src='https://example.com/images/edna-west.jpg' alt="Profile Sample project" class="rounded-logo">
+          <img src='https://maznaz-ha.github.io/marek.wayland.one/images/edna-west.jpg' alt="Profile Sample project" class="rounded-logo">
         </a>
       </div>
       <h2>Hi, I'm Edna 👋</h2>
@@ -203,19 +203,19 @@
         
 
         <p>
-            <a href="/about/">
+            <a href="/marek.wayland.one/about/">
                 About
             </a>
         </p>
 
         <p>
-            <a href="/portfolio/">
+            <a href="/marek.wayland.one/portfolio/">
                 Portfolio
             </a>
         </p>
 
         <p>
-            <a href="/post/">
+            <a href="/marek.wayland.one/post/">
                 Post
             </a>
         </p>
@@ -348,13 +348,13 @@
 
 
 <span >
-  <a href="https://example.com/">HOME</a>
+  <a href="https://maznaz-ha.github.io/marek.wayland.one/">HOME</a>
    / 
 </span>
 
 
 <span  class="active">
-  <a href="https://example.com/about/">ABOUT</a>
+  <a href="https://maznaz-ha.github.io/marek.wayland.one/about/">ABOUT</a>
   
 </span>
 
