--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang='en'><head>
-  <title> - Edna West</title>
+  <title> - Marek</title>
   <link rel='canonical' href='https://maznaz-ha.github.io/marek.wayland.one/404.html' />
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1' />
@@ -35,11 +35,11 @@
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='https://maznaz-ha.github.io/marek.wayland.one/images/edna-west.jpg' alt="Profile Sample project" class="rounded-logo">
+        <img src='https://maznaz-ha.github.io/images/marek.png' alt="Profile Sample project" class="rounded-logo">
       </a>
     </div>
-    <h2>Hi, I'm Edna 👋</h2>
-    <h3>I'm a Web Developer and Entrepreneur</h3>
+    <h2>Hi, I'm Marek</h2>
+    <h3>I'm a </h3>
     <div class="menu">
       
 
@@ -181,7 +181,7 @@
 </header>
 
 <div class="mobile-header">
-  <p> Edna West </p>
+  <p> Marek </p>
   <div class="hamburger">
     <div class="bar"></div>
     <div class="bar"></div>
@@ -194,11 +194,11 @@
     <div class="intro">
       <div class="logo-container">
         <a href="/">
-          <img src='https://maznaz-ha.github.io/marek.wayland.one/images/edna-west.jpg' alt="Profile Sample project" class="rounded-logo">
+          <img src='https://maznaz-ha.github.io/images/marek.png' alt="Profile Sample project" class="rounded-logo">
         </a>
       </div>
-      <h2>Hi, I'm Edna 👋</h2>
-      <h3>I'm a Web Developer and Entrepreneur</h3>
+      <h2>Hi, I'm Marek</h2>
+      <h3>I'm a </h3>
       <div class="menu">
         
 
@@ -400,7 +400,7 @@
   <footer>
     <div class="footer-wrapper">
       <p>Made with ❤️ &mdash; Powered by <a href="https://gohugo.io/" target="_blank" rel="external">Hugo</a> and the <a href="https://github.com/bjacquemet/personal-web" target='_blank' rel="external">Personal Web</a> theme. Icons come from the great <a href="https://fontawesome.com/license" target="_blank" rel="external">Font Awesome</a> library</p>
-      <p>© Edna West</p>
+      <p>© Marek</p>
     </div>
   </footer>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:500,600|Raleway:400,400i,600" rel="stylesheet">
