Using wayland domain

--- a/designs/photoshop/index.html
+++ b/designs/photoshop/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='en'><head>
   <title>Photoshop - Marek</title>
-  <link rel='canonical' href='https://maznaz-ha.github.io/marek.wayland.one/designs/photoshop/' />
+  <link rel='canonical' href='https://marek.wayland.one/designs/photoshop/' />
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1' />
   <meta name='description' content='' />
@@ -16,13 +16,13 @@
 
 
 
-<link rel="stylesheet" href="https://maznaz-ha.github.io/marek.wayland.one/sass/style.min.eabe1aa4bd266a15f7b39b122bd6a5cc75cb067e5373631ac21d7815d6240d6f.css" integrity="sha256-6r4apL0mahX3s5sSK9alzHXLBn5Tc2Mawh14FdYkDW8=" media="screen">
-<link rel="stylesheet" href="https://maznaz-ha.github.io/marek.wayland.one/syntax.min.css" integrity="" media="screen">
+<link rel="stylesheet" href="https://marek.wayland.one/sass/style.min.eabe1aa4bd266a15f7b39b122bd6a5cc75cb067e5373631ac21d7815d6240d6f.css" integrity="sha256-6r4apL0mahX3s5sSK9alzHXLBn5Tc2Mawh14FdYkDW8=" media="screen">
+<link rel="stylesheet" href="https://marek.wayland.one/syntax.min.css" integrity="" media="screen">
 
   <meta property="og:title" content="Photoshop" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://maznaz-ha.github.io/marek.wayland.one/designs/photoshop/" />
+<meta property="og:url" content="https://marek.wayland.one/designs/photoshop/" />
 
   <meta itemprop="name" content="Photoshop">
 <meta itemprop="description" content="">
@@ -31,11 +31,11 @@
 
   <header style="background-image:linear-gradient(
       rgba(0,0,0,0.4),rgba(0,0,0,0.4)
-    ),url(&#39;https://maznaz-ha.github.io/marek.wayland.one/images/default-sidebar.jpg&#39;)">
+    ),url(&#39;https://marek.wayland.one/images/default-sidebar.jpg&#39;)">
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='https://maznaz-ha.github.io/images/marek.png' alt="Profile Sample project" class="rounded-logo">
+        <img src='https://marek.wayland.one/images/marek.png' alt="Profile Pages" class="rounded-logo">
       </a>
     </div>
     <h2>Hi, I'm Marek</h2>
@@ -44,19 +44,19 @@
       
 
         <p>
-            <a href="/marek.wayland.one/about/">
+            <a href="/about/">
                 About
             </a>
         </p>
 
         <p>
-            <a href="/marek.wayland.one/portfolio/">
+            <a href="/portfolio/">
                 Portfolio
             </a>
         </p>
 
         <p>
-            <a href="/marek.wayland.one/post/">
+            <a href="/post/">
                 Post
             </a>
         </p>
@@ -194,7 +194,7 @@
     <div class="intro">
       <div class="logo-container">
         <a href="/">
-          <img src='https://maznaz-ha.github.io/images/marek.png' alt="Profile Sample project" class="rounded-logo">
+          <img src='https://marek.wayland.one/images/marek.png' alt="Profile Pages" class="rounded-logo">
         </a>
       </div>
       <h2>Hi, I'm Marek</h2>
@@ -203,19 +203,19 @@
         
 
         <p>
-            <a href="/marek.wayland.one/about/">
+            <a href="/about/">
                 About
             </a>
         </p>
 
         <p>
-            <a href="/marek.wayland.one/portfolio/">
+            <a href="/portfolio/">
                 Portfolio
             </a>
         </p>
 
         <p>
-            <a href="/marek.wayland.one/post/">
+            <a href="/post/">
                 Post
             </a>
         </p>
@@ -350,19 +350,19 @@
 
 
 <span >
-  <a href="https://maznaz-ha.github.io/marek.wayland.one/">HOME</a>
+  <a href="https://marek.wayland.one/">HOME</a>
    / 
 </span>
 
 
 <span >
-  <a href="https://maznaz-ha.github.io/marek.wayland.one/designs/">Designs</a>
+  <a href="https://marek.wayland.one/designs/">Designs</a>
    / 
 </span>
 
 
 <span  class="active">
-  <a href="https://maznaz-ha.github.io/marek.wayland.one/designs/photoshop/">Photoshop</a>
+  <a href="https://marek.wayland.one/designs/photoshop/">Photoshop</a>
   
 </span>
 
@@ -374,7 +374,7 @@
 <h2>Photoshop</h2>
 
     <div class="portfolio-list">
-  <a href="https://maznaz-ha.github.io/marek.wayland.one/portfolio/sample-project/">
+  <a href="https://marek.wayland.one/portfolio/sample-project/">
     <div class="portfolio-container">
       <img title="Sample project" alt="Sample project" src="/portfolio/sample-project/sample.jpg" />
       <div class="img-overlay">
