Some marek specific content

--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
   <link rel='canonical' href='https://marek.wayland.one/about/' />
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1' />
-  <meta name='description' content='Hey, I&#39;m Edna West' />
+  <meta name='description' content='Hi, I&#39;m Marek' />
   <meta name='theme-color' content='#FD3519' />
   
 
@@ -20,18 +20,18 @@
 <link rel="stylesheet" href="https://marek.wayland.one/syntax.min.css" integrity="" media="screen">
 
   <meta property="og:title" content="ABOUT" />
-<meta property="og:description" content="Hey, I&#39;m Edna West" />
+<meta property="og:description" content="Hi, I&#39;m Marek" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://marek.wayland.one/about/" /><meta property="og:image" content="https://marek.wayland.one/images/sample.jpg" />
 
   <meta itemprop="name" content="ABOUT">
-<meta itemprop="description" content="Hey, I&#39;m Edna West">
+<meta itemprop="description" content="Hi, I&#39;m Marek">
 </head>
 <body>
 
   <header style="background-image:linear-gradient(
       rgba(0,0,0,0.4),rgba(0,0,0,0.4)
-    ),url(&#39;https://marek.wayland.one/images/default-sidebar.jpg&#39;)">
+    ),url(&#39;https://marek.wayland.one/images/default-sidebar-bluegrey.jpg&#39;)">
   <div class="intro">
     <div class="logo-container">
       <a href="/">
@@ -39,7 +39,7 @@
       </a>
     </div>
     <h2>Hi, I'm Marek</h2>
-    <h3>I'm a </h3>
+    <h3>I'm a CEO, CTO and entrepeneur</h3>
     <div class="menu">
       
 
@@ -198,7 +198,7 @@
         </a>
       </div>
       <h2>Hi, I'm Marek</h2>
-      <h3>I'm a </h3>
+      <h3>I'm a CEO, CTO and entrepeneur</h3>
       <div class="menu">
         
 
@@ -364,8 +364,12 @@
     <main id="content" class="about">
 
   <h1 id="title"> ABOUT</h1>
-  <p><p>This is my about page. 👋</p>
-<p>Lorem ipsum dolor sit amet, 😄 consectetur adipisicing elit. Voluptates aut, tenetur distinctio voluptatibus ab. Nihil id dignissimos unde, tenetur iusto facilis suscipit corporis, ipsam necessitatibus, eaque iste deleniti consequuntur reprehenderit? 🌍</p>
+  <p><p>About me&hellip;</p>
+<p>Dynamic executive and seasoned software engineer with over 15 years of leadership experience and 12 years at the software engineering forefront. I&rsquo;ve had the privilege of growing a business from its infancy to VC-backed maturity with a £4 million valuation. I’m an experienced fundraiser with over £2.5 million raised in investments through multiple rounds across different companies.</p>
+<p>I was selected for the eminent 10,000 Small Businesses programme by Goldman Sachs, sharpening my executive leadership skills further at Saïd Business School, completing the Oxford Executive Leadership Programme. I have an established history of building and managing high-performing teams, having expanded GWD&rsquo;s headcount from 4 to 20 and developing multiple B2B products.</p>
+<p>I pride myself on bridging the gap between technical nuances and business goals. As evidence, at UKDedicated, I led the creation of an enterprise-grade domain registration platform which played a key role in an acquisition by Simply Hosting.</p>
+<p>My penchant for innovation began early, securing a £250k private investment for a software startup at just 16 years old.</p>
+<p>Beyond the corporate realm, I&rsquo;m a Leadership Development Pathway participant at Toastmasters, a fervent advocate for environmental causes in my community, and have even contributed to the core PHP codebase. In my leisure, I find joy in woodworking, home automation, and renovations.</p>
 </p>
   
     <ul id="list">
