--- a/portfolio/sample-project/index.html
+++ b/portfolio/sample-project/index.html
@@ -36,7 +36,7 @@
 
   <header style="background-image:linear-gradient(
       rgba(0,0,0,0.4),rgba(0,0,0,0.4)
-    ),url(&#39;https://marek.wayland.one/images/default-sidebar.jpg&#39;)">
+    ),url(&#39;https://marek.wayland.one/images/default-sidebar-bluegrey.jpg&#39;)">
   <div class="intro">
     <div class="logo-container">
       <a href="/">
@@ -44,7 +44,7 @@
       </a>
     </div>
     <h2>Hi, I'm Marek</h2>
-    <h3>I'm a </h3>
+    <h3>I'm a CEO, CTO and entrepeneur</h3>
     <div class="menu">
       
 
@@ -203,7 +203,7 @@
         </a>
       </div>
       <h2>Hi, I'm Marek</h2>
-      <h3>I'm a </h3>
+      <h3>I'm a CEO, CTO and entrepeneur</h3>
       <div class="menu">
         
 
