--- a/techs/index.html
+++ b/techs/index.html
@@ -35,11 +35,11 @@
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='https://marek.wayland.one/images/marek.png' alt="Profile Pages" class="rounded-logo">
+        <img src='https://marek.wayland.one/images/marek.png' alt="Profile ABOUT" class="rounded-logo">
       </a>
     </div>
     <h2>Hi, I'm Marek</h2>
-    <h3>I'm a CEO, CTO and entrepeneur</h3>
+    <h3>I'm a CEO, CTO and Entrepeneur</h3>
     <div class="menu">
       
 
@@ -194,11 +194,11 @@
     <div class="intro">
       <div class="logo-container">
         <a href="/">
-          <img src='https://marek.wayland.one/images/marek.png' alt="Profile Pages" class="rounded-logo">
+          <img src='https://marek.wayland.one/images/marek.png' alt="Profile ABOUT" class="rounded-logo">
         </a>
       </div>
       <h2>Hi, I'm Marek</h2>
-      <h3>I'm a CEO, CTO and entrepeneur</h3>
+      <h3>I'm a CEO, CTO and Entrepeneur</h3>
       <div class="menu">
         
 
