Fixed preview of blog posts

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel='canonical' href='https://marek.wayland.one/' />
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1' />
-  <meta name='description' content='Welcome to this sample project' />
+  <meta name='description' content='Welcome to Marek&#39;s site' />
   <meta name='theme-color' content='#FD3519' />
   
 
@@ -20,12 +20,12 @@
 <link rel="stylesheet" href="https://marek.wayland.one/syntax.min.css" integrity="" media="screen">
 
   <meta property="og:title" content="HOME" />
-<meta property="og:description" content="Welcome to this sample project" />
+<meta property="og:description" content="Welcome to Marek&#39;s site" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://marek.wayland.one/" /><meta property="og:image" content="https://marek.wayland.one/images/sample.jpg" />
+<meta property="og:url" content="https://marek.wayland.one/" /><meta property="og:image" content="https://marek.wayland.one/images/marek.png" />
 
   <meta itemprop="name" content="HOME">
-<meta itemprop="description" content="Welcome to this sample project">
+<meta itemprop="description" content="Welcome to Marek&#39;s site">
 </head>
 <body>
 
@@ -38,7 +38,7 @@
         <img src='https://marek.wayland.one/images/marek.png' alt="Profile HOME" class="rounded-logo">
       </a>
     </div>
-    <h2>Hi, I'm Marek</h2>
+    <h2>Hi, I'm Marek 👋</h2>
     <h3>I'm a CEO, CTO and Entrepeneur</h3>
     <div class="menu">
       
@@ -56,7 +56,7 @@
         </p>
 
         <p>
-            <a href="/thoughts/">
+            <a href="/post/">
                 Thoughts
             </a>
         </p>
@@ -197,7 +197,7 @@
           <img src='https://marek.wayland.one/images/marek.png' alt="Profile HOME" class="rounded-logo">
         </a>
       </div>
-      <h2>Hi, I'm Marek</h2>
+      <h2>Hi, I'm Marek 👋</h2>
       <h3>I'm a CEO, CTO and Entrepeneur</h3>
       <div class="menu">
         
@@ -215,7 +215,7 @@
         </p>
 
         <p>
-            <a href="/thoughts/">
+            <a href="/post/">
                 Thoughts
             </a>
         </p>
