--- a/portfolio/sample-project/index.html
+++ b/portfolio/sample-project/index.html
@@ -43,7 +43,7 @@
         <img src='https://marek.wayland.one/images/marek.png' alt="Profile HOME" class="rounded-logo">
       </a>
     </div>
-    <h2>Hi, I'm Marek</h2>
+    <h2>Hi, I'm Marek 👋</h2>
     <h3>I'm a CEO, CTO and Entrepeneur</h3>
     <div class="menu">
       
@@ -61,7 +61,7 @@
         </p>
 
         <p>
-            <a href="/thoughts/">
+            <a href="/post/">
                 Thoughts
             </a>
         </p>
@@ -202,7 +202,7 @@
           <img src='https://marek.wayland.one/images/marek.png' alt="Profile HOME" class="rounded-logo">
         </a>
       </div>
-      <h2>Hi, I'm Marek</h2>
+      <h2>Hi, I'm Marek 👋</h2>
       <h3>I'm a CEO, CTO and Entrepeneur</h3>
       <div class="menu">
         
@@ -220,7 +220,7 @@
         </p>
 
         <p>
-            <a href="/thoughts/">
+            <a href="/post/">
                 Thoughts
             </a>
         </p>
