--- a/techs/d3/index.html
+++ b/techs/d3/index.html
@@ -38,7 +38,7 @@
         <img src='https://marek.wayland.one/images/marek.png' alt="Profile HOME" class="rounded-logo">
       </a>
     </div>
-    <h2>Hi, I'm Marek</h2>
+    <h2>Hi, I'm Marek 👋</h2>
     <h3>I'm a CEO, CTO and Entrepeneur</h3>
     <div class="menu">
       
@@ -56,7 +56,7 @@
         </p>
 
         <p>
-            <a href="/thoughts/">
+            <a href="/post/">
                 Thoughts
             </a>
         </p>
@@ -197,7 +197,7 @@
           <img src='https://marek.wayland.one/images/marek.png' alt="Profile HOME" class="rounded-logo">
         </a>
       </div>
-      <h2>Hi, I'm Marek</h2>
+      <h2>Hi, I'm Marek 👋</h2>
       <h3>I'm a CEO, CTO and Entrepeneur</h3>
       <div class="menu">
         
@@ -215,7 +215,7 @@
         </p>
 
         <p>
-            <a href="/thoughts/">
+            <a href="/post/">
                 Thoughts
             </a>
         </p>
