Google analytics also

--- a/designs/index.html
+++ b/designs/index.html
@@ -54,6 +54,8 @@
 
   <meta itemprop="name" content="Designs">
 <meta itemprop="description" content="">
+  
+  
 </head>
 <body>
 
@@ -63,7 +65,7 @@
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='https://marek.wayland.one/images/marek.png' alt="Profile HOME" class="rounded-logo">
+        <img src='https://marek.wayland.one/images/marek.png' alt="Profile PORTFOLIO" class="rounded-logo">
       </a>
     </div>
     <h2>Hi, I'm Marek Narkiewicz 👋</h2>
@@ -151,7 +153,7 @@
     <div class="intro">
       <div class="logo-container">
         <a href="/">
-          <img src='https://marek.wayland.one/images/marek.png' alt="Profile HOME" class="rounded-logo">
+          <img src='https://marek.wayland.one/images/marek.png' alt="Profile PORTFOLIO" class="rounded-logo">
         </a>
       </div>
       <h2>Hi, I'm Marek Narkiewicz 👋</h2>
