--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
   <meta itemprop="name" content="HOME">
 <meta itemprop="description" content="Welcome to Marek&#39;s site">
   
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4F7ZKEG553"></script>
+<script>
+var dnt = (navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack);
+var doNotTrack = (dnt == "1" || dnt == "yes");
+if (!doNotTrack) {
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-4F7ZKEG553', { 'anonymize_ip': true });
+}
+</script>
+
 </head>
 <body>
 
@@ -64,7 +76,7 @@
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='https://marek.wayland.one/images/marek.png' alt="Profile Photoshop" class="rounded-logo">
+        <img src='https://marek.wayland.one/images/marek.png' alt="Profile PORTFOLIO" class="rounded-logo">
       </a>
     </div>
     <h2>Hi, I'm Marek Narkiewicz 👋</h2>
@@ -152,7 +164,7 @@
     <div class="intro">
       <div class="logo-container">
         <a href="/">
-          <img src='https://marek.wayland.one/images/marek.png' alt="Profile Photoshop" class="rounded-logo">
+          <img src='https://marek.wayland.one/images/marek.png' alt="Profile PORTFOLIO" class="rounded-logo">
         </a>
       </div>
       <h2>Hi, I'm Marek Narkiewicz 👋</h2>
@@ -283,6 +295,18 @@
   </footer>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:500,600|Raleway:400,400i,600" rel="stylesheet">
   
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4F7ZKEG553"></script>
+<script>
+var dnt = (navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack);
+var doNotTrack = (dnt == "1" || dnt == "yes");
+if (!doNotTrack) {
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-4F7ZKEG553', { 'anonymize_ip': true });
+}
+</script>
+
   <script type="text/javascript">
     document.querySelector('.mobile-header').addEventListener('click', function () {
       var om = document.querySelector(".overlay-menu");
