Capitalised C in ChatGPT

--- a/404.html
+++ b/404.html
@@ -78,7 +78,7 @@ if (!doNotTrack) {
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='https://marek.wayland.one/images/marek.png' alt="Profile PORTFOLIO" class="rounded-logo">
+        <img src='https://marek.wayland.one/images/marek.png' alt="Profile HOME" class="rounded-logo">
       </a>
     </div>
     <h2>Hi, I'm Marek Narkiewicz 👋</h2>
@@ -160,7 +160,7 @@ if (!doNotTrack) {
     <div class="intro">
       <div class="logo-container">
         <a href="/">
-          <img src='https://marek.wayland.one/images/marek.png' alt="Profile PORTFOLIO" class="rounded-logo">
+          <img src='https://marek.wayland.one/images/marek.png' alt="Profile HOME" class="rounded-logo">
         </a>
       </div>
       <h2>Hi, I'm Marek Narkiewicz 👋</h2>
@@ -270,10 +270,10 @@ if (!doNotTrack) {
   <h2>
     <a href="https://marek.wayland.one/post/ai-fun-chatgpt/">AI Fundamentals - What is ChatGPT?</a>
   </h2>
-  <p><p>What chatGPT is and what it isn&rsquo;t 🤖</p>
+  <p><p>What ChatGPT is and what it isn&rsquo;t 🤖</p>
 <figure><img src="/post/images/chatgpt.png"
-         alt="AI generated visualisation of chatGPT as described by chatGPT"/><figcaption>
-            <p>AI generated visualisation of chatGPT as described by chatGPT</p>
+         alt="AI generated visualisation of ChatGPT as described by ChatGPT"/><figcaption>
+            <p>AI generated visualisation of ChatGPT as described by ChatGPT</p>
         </figcaption>
 </figure></p>
   <div class="read-more">
