--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -78,7 +78,7 @@ if (!doNotTrack) {
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='https://marek.wayland.one/images/marek.png' alt="Profile HOME" class="rounded-logo">
+        <img src='https://marek.wayland.one/images/marek.png' alt="Profile Sample project" class="rounded-logo">
       </a>
     </div>
     <h2>Hi, I'm Marek Narkiewicz 👋</h2>
@@ -160,7 +160,7 @@ if (!doNotTrack) {
     <div class="intro">
       <div class="logo-container">
         <a href="/">
-          <img src='https://marek.wayland.one/images/marek.png' alt="Profile HOME" class="rounded-logo">
+          <img src='https://marek.wayland.one/images/marek.png' alt="Profile Sample project" class="rounded-logo">
         </a>
       </div>
       <h2>Hi, I'm Marek Narkiewicz 👋</h2>
